--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../styles.css" />
-    <title>JavaScript Background Color Switcher</title>
+    <title>Color Changer</title>
   </head>
   <body>
+    <div id="custom-alert"></div>
     <nav>
       <a href="/" aria-current="page">Home</a>
       >
@@ -29,7 +30,7 @@
       <h1>Color Scheme Switcher</h1>
       <span class="button" id="grey"></span>
       <span class="button" id="white"></span>
-      <span class="button" id="blue"></span>
+      <span class="button" id="red"></span>
       <span class="button" id="yellow"></span>
       <h2>
         Try clicking on one of the colors above
